--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@ body {
     /*background: url(/static/img/arches.png) repeat 0 0;*/
 }
 
+a:hover i {
+    background-image: url("../img/glyphicons-halflings-white.png");
+}
+
 /* ### NAVBAR ### */
 
 .navbar-form input,
@@ -34,11 +38,6 @@ body {
 
 .hero-unit {
     padding-bottom: 15px;
-}
-
-.hero-unit .btn {
-    margin-top: 10px;
-    margin-right: 10px;
 }
 
 /* ### REGISTER & LOGIN FORMS */
@@ -80,42 +79,65 @@ body {
     padding: 2px;
     padding-bottom: 4px;
     margin-bottom:4px;
-    background-color: #FEFCFA;
-    /*background-color:#e1e8d9; tosi vaalea vihertävä*/
-    /*background-color: #C4D4D1;*/
-    border-radius: 4px 4px 4px 4px;   
+    /*background-color: #FEFCFA;*/
+    /*background-color: #DCDCDC;*/
+    border-radius: 4px 4px 4px 4px;
+    position: relative;
 }
 
-.listitem.odd {
-    background-color: #b5c9c6;
+.listitem.odd, .listitem.description {
+    /*background-color: #b5c9c6;*/
+    /*background-color: #f7f7f7;*/
+    background-color: #DCDCDC;
+    
 }
 
 .listitem .lower {
     margin-top: 10px;
-}
-.listitem .lower {
-    font-size:13px;
-    margin-top:4px;
+    font-size: 11px;
 }
 
 .listitem .lower .comments {
     color: green;
 }
 
-.listitem .lower .badge {
-    margin-top:2px;
-}
-
-.listitem .lower i:hover {
-    background-image: url("../img/glyphicons-halflings-white.png");
-}
-
 .list {
     position: relative;
+    height:     100%;
+    width:      100%;
+    left:0;
+    top:0;
 }
 
+.materials {
+    position: relative;
+    overflow-y: auto;
+    max-height: 800px;
+}
+
+.list-comments .filler {
+    min-height: 500px;
+    background-color: #F7F7F7;
+    border-radius: 8px;
+}
+
+.listitem .lower .points {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
+.listitem .lower .points a {
+    visibility: hidden;
+}
+
+.listitem .lower .badge {
+    margin-top: 3px;
+}
+
+
 .spinner {
-    display:none;
+    display:block;
     position: absolute;
     z-index: 1000;
     height:     100%;
@@ -126,4 +148,115 @@ body {
                 url('http://i.stack.imgur.com/FhHRx.gif') 
                 50% 50% 
                 no-repeat;
+}
+
+.listitem.single {
+    overflow: hidden;
+    background-color:;
+}
+
+.listitem.single .lower .points {
+    bottom: 3px;
+    right: 2px;
+}
+
+.btn-back {
+    float: left;
+    min-height: 46px;
+    margin-right: 4px;
+}
+
+.btn-back i {
+    margin-top: 14px;
+}
+
+.description {
+    background-color: #EEEEEE;
+    padding: 12px;
+}
+
+.description div {
+    text-align: center;
+    margin: 8px;
+}
+
+.comments {
+    padding: 6px;
+    border-radius: 4px;
+}
+
+.comments hr {
+    margin: 10px 0;
+}
+
+.commentitem {
+    min-height:32px;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    right: 0;
+    padding: 2px;
+    padding-bottom: 8px;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.author {
+    font-size: 11px;
+    margin-bottom: 2px;
+}
+
+.comment-form form textarea {
+    width: 95%;
+    margin-left: 5px;
+    margin-right: 15px;
+    margin-top: 10px;
+    resize: none;
+}
+
+/* TABLE */
+
+table.tablesorter {
+    text-align: left;
+    font-size: 9pt;
+    width: 100%;
+}
+
+table.tablesorter thead tr th {
+    min-width: 25px;
+    background-color: #E6EEEE;
+    border: 1px solid #FFF;
+    padding: 4px;
+}
+
+table.tablesorter thead tr .header {
+    background-image: url("../img/bg.gif");
+    background-repeat: no-repeat;
+    background-position: center right;
+    cursor: pointer;
+}
+
+table.tablesorter thead tr .headerSortUp {
+    background-image: url("../img/asc.gif");
+}
+
+table.tablesorter thead tr .headerSortDown {
+    background-image: url("../img/desc.gif");
+}
+
+table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
+    background-color: #8dbdd8;
+}
+
+.tablesorter tbody > tr:nth-child(odd) {
+    background-color: #f9f9f9;
+}
+
+table.tablesorter tr:hover > td, table.tablesorter .selected > td {
+    background-color: #D9EDF7;
+    cursor: pointer;
+}
+
+.sidebar-addnew {
+    text-align: center;
+    margin: 20px 0;
 }
