--- a/templates/user/base.html
+++ b/templates/user/base.html
@@ -3,53 +3,58 @@ $def with (content)
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>$content.title</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>$content.title</title>
+  <meta name="description" content="Sivusto kurssimateriaalien jakamista varten.">
+  <meta name="keywords" content="kurssimateriaalit,muistiinpanot,tiivistelmät">
+  <meta name="author" content="Aleksi Pekkala">
+  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/jqcloud.css">
+  <script src="/static/js/jquery.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/jquery.tablesorter.min.js"></script>
+  <script src="/static/js/jqcloud-1.0.2.min.js"></script>
 </head>
 <body>
-     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          $if content.title.endswith("Index"):
-            <a class="brand active" href="/">Kurssimateriaalit 0.1</a>
-          $else:
-            <a class="brand" href="/">Kurssimateriaalit 0.1</a>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        $if content.title.endswith("Index"):
+          <a class="brand active" href="/">Kurssimateriaalit 0.1</a>
+        $else:
+          <a class="brand" href="/">Kurssimateriaalit 0.1</a>
 
-          $if session.login:
-            $if session.privilege == 0:
-              <form class="navbar-form pull-right" action="/logout" method="POST">
-                <button type="submit" class="btn btn-danger">Kirjaudu ulos</button>
-              </form>
-              <form class="navbar-form pull-right" action="/confirm" method="GET">
-                <button id="logout-button" type="submit" class="btn btn-success">Vahvista käyttäjätili</button>
-              </form>
-              <p class="navbar-text pull-right"><a href="/confirm">Käyttäjätiliä ei ole vahvistettu!</a></p>
-            $else:
-              <form class="navbar-form pull-right" action="/logout" method="POST">
-                <button type="submit" class="btn btn-danger">Kirjaudu ulos</button>
-              </form>
-              <p class="navbar-text pull-right">Kirjautunut käyttäjänä <a href="#profile"><b>$session.user</b></a></p>
+        $if session.login:
+          $if session.privilege == 0:
+            <form class="navbar-form pull-right" action="/logout" method="POST">
+              <button type="submit" class="btn btn-danger">Kirjaudu ulos</button>
+            </form>
+            <form class="navbar-form pull-right" action="/confirm" method="GET">
+              <button id="logout-button" type="submit" class="btn btn-success">Vahvista käyttäjätili</button>
+            </form>
+            <p class="navbar-text pull-right"><a href="/confirm">Käyttäjätiliä ei ole vahvistettu!</a></p>
+          $else:
+            <form class="navbar-form pull-right" action="/logout" method="POST">
+              <button type="submit" class="btn btn-danger">Kirjaudu ulos</button>
+            </form>
+            <p class="navbar-text pull-right">Kirjautunut käyttäjänä <a href="#profile"><b>$session.user</b></a></p>
               
-          $elif content.show_login_form == "True":
-              <form class="navbar-form pull-right" action="/login" method="POST">
-                <input class="span2" type="text" name="username" placeholder="Käyttäjänimi">
-                <input class="span2" type="password" name="password" placeholder="Salasana">
-                <button type="submit" class="btn btn-primary">Log in</button>
-              </form>
-              <p class="navbar-text pull-right"><a href="/register">Rekisteröidy</a></p>
+        $elif content.show_login_form == "True":
+          <form class="navbar-form pull-right" action="/login" method="POST">
+            <input class="span2" type="text" name="username" placeholder="Käyttäjänimi">
+            <input class="span2" type="password" name="password" placeholder="Salasana">
+            <button type="submit" class="btn btn-primary">Log in</button>
+          </form>
+          <p class="navbar-text pull-right"><a href="/register">Rekisteröidy</a></p>
                 
-        </div> <!--/.container-->
-      </div> <!--/.navbar-inner-->
-    </div> <!--/.navbar-->
+      </div> <!--/.container-->
+    </div> <!--/.navbar-inner-->
+  </div> <!--/.navbar-->
 
     $:content
-    
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/jquery.tablesorter.min.js"></script>
-    
+
 </body>
 </html>
