--- a/templates/user/list_single.html
+++ b/templates/user/list_single.html
@@ -1,51 +1,58 @@
-$def with (material, comments, title)
+$def with (material, comments)
 $# Renders a single material and its comments.
 
 <!-- INFO -->
 <div class="material-info">
   <div class="upper">
-    <a href="">$material.code</a> $material.title
+    <a href="" class="course-link">$material.code</a> $material.title
   </div>
   <div class="lower">
-    <a href="" data-id="$material.user_id" class="user-link">$material.name</a> $format_date(material.date_added) - $material.points tykkäystä .$material.type $format_size(material.size)
-    </span> 
-  </div>
+    <a href="" data-id="$material.user_id" class="user-link">$material.name</a> $format_date(material.date_added) - $material.points tykkäystä
+  </div>  
   <br>
-  $if material.description:
-    <blockquote>
+  
+  <blockquote>
+    $if material.description:
       $material.description
-    </blockquote>
-  $else:
-    Ei kuvausta.
+    $else:
+      Ei kuvausta.
+  </blockquote>
+  
+  $if material.tags:
+    <div class="material-tags">
+      tagit:
+      $for tag in material.tags.split():
+        <a href="" class="tag-link">$tag</a>
+    </div>
 </div><!--/.material-info-->
 
 <!-- BUTTONS -->
 <div class="material-buttons">
   <div>
-    <a class="btn btn-like">Tykkää <i class="icon-thumbs-up"></i></a>
+    <a class="btn btn-like" data-id="$material.id">Tykkää <i class="icon-thumbs-up"></i></a>
     <a href="/download/$material.id" class="btn">Lataa <i class="icon-file"></i></a>
     $if material.user_id == session.id:
       <a href="/delete/$material.id" class="btn btn-danger">Poista <i class="icon-remove"></i></a>
+    <p class="muted"><small>.$material.type $format_size(material.size)</small></p>
   </div>
 </div>
 
 <!-- COMMENTS -->
+$if comments:
+  <strong>Kommentit:</strong> ($material.comments kpl)
+$else:
+  Ei kommentteja
 <div class="material-comments">
-  $if comments:
-    <strong>Kommentit:</strong> ($material.comments kpl)
-  $else:
-    Ei kommentteja
-    <br>
   $for comment in comments:
-    <div class="commentitem">
-      <div class="author"><a href="#">$comment.name</a> - $format_time(comment.date_added)</div>
-      <p style="font-size:14px;word-wrap:break-word">$comment.content</p>
+    <div class="comment">
+      <div class="author"><i class="icon-user"></i> <a href="" class="user-link">$comment.name</a> - $format_time(comment.date_added)</div>
+      <p>$comment.content</p>
     </div>
     <hr>
-  <div class="comment-form">
-    <form>
-      <textarea rows="3" placeholder="Maksimipituus 300 merkkiä"></textarea>
-      <a class="btn btn-comment pull-right" data-id="$material.id" href="">Lisää kommentti <i class="icon-comment"></i></a>
-    </form>
-  </div>
+</div>
+<div class="comment-form">
+  <form>
+    <textarea rows="3" placeholder="Maksimipituus 300 merkkiä"></textarea>
+    <a class="btn btn-comment pull-right" data-id="$material.id" href="">Lisää kommentti <i class="icon-comment"></i></a>
+  </form>
 </div>
